--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,24 @@
-version: '3.5'
+version: '3.9'
 
 # Services
 services:
 
   # PHP FPM Service
   php:
-    container_name: php1
     build:
       dockerfile: ./docker/php/dockerfile
       context: .
+    environment:
+      SSMTP_MAILHUB: mailhog:1025
+      PHP_SENDMAIL_PATH: '"/usr/bin/dos2unix -u | /usr/sbin/ssmtp -t -f"'
     volumes:
       - './:/var/www/html'
     depends_on:
       - mariadb
+      - mailhog
 
   # Nginx Service
   nginx:
-    container_name: web1
     image: nginx:latest
     ports:
       - 8080:80
@@ -30,15 +32,33 @@ services:
 
   # MariaDB Service
   mariadb:
-    container_name: db1
     image: mariadb:latest
     environment:
-      MYSQL_DATABASE: voorbeeld_db
+      MYSQL_DATABASE: newsletters
       MYSQL_USER: db_user
       MYSQL_PASSWORD: mijn_p@ss#
       MYSQL_ROOT_PASSWORD: 4dy5qwtrsag#!sad
+    ports:
+      - 3309:3306
     volumes:
       - './docker/mysqldata:/var/lib/mysql'
+
+  # mailhog
+  mailhog:
+    image: mailhog/mailhog:latest
+    ports:
+      - 1025:1025
+      - 8025:8025
+
+  # php myadmin in an external image
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      PMA_HOST: mariadb
+      PMA_USER: root
+      PMA_PASSWORD: 4dy5qwtrsag#!sad
+    ports:
+      - "8088:80"
 
 # Volumes
 volumes:
